RESOLVED FIXED40407
crash when focus is changed while trying to focus next element
https://bugs.webkit.org/show_bug.cgi?id=40407
Summary crash when focus is changed while trying to focus next element
Tony Chang
Reported 2010-06-10 00:51:26 PDT
See attached test case. I'm investigating a fix.
Attachments
Patch (3.31 KB, patch)
2010-06-10 02:25 PDT, Tony Chang
tkent: review+
Tony Chang
Comment 1 2010-06-10 02:25:17 PDT
Kent Tamura
Comment 2 2010-06-10 02:34:22 PDT
Comment on attachment 58345 [details] Patch LayoutTests/fast/events/focus-change-crash-expected.txt:1 + Type something into the first input and press tab. The browser should not crash. nit: Can we insert "PASS" or "SUCCESS" into the document before the test finishes?
Alexey Proskuryakov
Comment 3 2010-06-10 13:04:36 PDT
Tony Chang
Comment 4 2010-06-10 17:49:33 PDT
WebKit Review Bot
Comment 5 2010-06-10 18:10:32 PDT
http://trac.webkit.org/changeset/60984 might have broken Chromium Mac Release The following changes are on the blame list: http://trac.webkit.org/changeset/60984 http://trac.webkit.org/changeset/60985
Tony Chang
Comment 6 2010-06-10 20:24:19 PDT
(In reply to comment #4) > Committed r60984: <http://trac.webkit.org/changeset/60984> I added PASSED to the test before landing this patch.
Note You need to log in before you can comment on or make changes to this bug.