2010-06-10  Tony Chang  <tony@chromium.org>

Reviewed by Kent Tamura.

        crash when focus is changed while trying to focus next element
        https://bugs.webkit.org/show_bug.cgi?id=40407

        * fast/events/focus-change-crash-expected.txt: Added.
        * fast/events/focus-change-crash.html: Added.
2010-06-10  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        crash when focus is changed while trying to focus next element
        https://bugs.webkit.org/show_bug.cgi?id=40407

        Test: fast/events/focus-change-crash.html

        * dom/Element.cpp:
        (WebCore::Element::focus):

Canonical link: https://commits.webkit.org/51999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60984 268f45cc-cd09-0410-ab3c-d52691b4dbfc